--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
         "autoprefixer": "^10.4.21",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "livewire-sortable": "^1.0.0",
         "postcss": "^8.5.3",
         "postcss-nesting": "^13.0.1",
         "tailwindcss": "^3.4.17",
         "vite": "^6.3.2"
     },
     "dependencies": {
+        "sortablejs": "^1.15.6",
         "three": "^0.175.0"
     }
 }
