--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "@tailwindcss/typography": "^0.5.16",
         "autoprefixer": "^10.4.21",
         "axios": "^1.6.4",
+        "daisyui": "^5.0.38",
         "laravel-vite-plugin": "^1.0",
         "livewire-sortable": "^1.0.0",
         "postcss": "^8.5.3",
         "postcss-nesting": "^13.0.1",
         "tailwindcss": "^3.4.17",
+        "tippy.js": "^6.3.7",
         "vite": "^6.3.2"
     },
     "dependencies": {
